refactor: communities listing
