# angular-hub/src/models/media-channel.model.ts
@@ -1,4 +1,0 @@
-export interface MediaChannel {
-  url: string;
-  language: string;
-}
